Replace some magic Constants in ChunkProviderGalaxiaPlanet